TestSuite/errors/err0214.pas
type A = interface
  function f: integer;
end;

B = class(A)
  
end;

begin

end.